# CV-Template

./: .gitignore  README.md  YourResume.md  de.html  demo.html  design_config.yaml  example_CV.yaml  example_CV_en.yaml  fresh.config.ts  index.html  me_de.md  me_en.md  package-lock.json  package.json  pyproject.toml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: azure-static-web-apps-jolly-coast-0d74e3403.yml
anschmiegcv/: Header.j2.typ  Preamble.j2.typ  SectionBeginning.j2.typ  SectionEnding.j2.typ
anschmiegcv/entries/: BulletEntry.j2.typ  EducationEntry.j2.typ  ExperienceEntry.j2.typ  NormalEntry.j2.typ  NumberedEntry.j2.typ  PublicationEntry.j2.typ  ReversedNumberedEntry.j2.typ
assets/: mobile.css  plugin-progressbar.css  plugin-progressbar.js  print.css  script.js  script.js.orig  style.css  style_original.css  template.html
assets/modules/: index.js  package-lock.json  package.json  webpack.config.js
assets/modules/custom/: cv.js  markdownItFontAwesome.js  markdownItPlugins.js  nav.js  profile.js  reader.js  rearrange.js
assets/styles/: bootstrap_custom.scss  left-panel.css  main.css  main.scss  timeline.css  timeline.scss
components/: Sidebar.tsx  config.ts
cv-files/: de.json  de.md  en.md  icons.json
routes/: _app.tsx  index.tsx
src/anschmiegcv_tools/: __init__.py  cli.py  palette.py  render.py  sync.py
src/anschmiegcv_tools.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
v1/: README.md  index.html
v1/assets/: filters.lua  print.css  style.css
(+11 files in other folders)
